# circa

./: .gitignore  INSTALL  LICENSE  Makefile.am  README  README.md  circa.c  circa.conf  circa.man  configure.ac  version.sh
.github/workflows/: ci.yaml  release.yaml
